# ircMonad

./: ircfrog.cabal  stack.yaml
src/: Main.hs
src/IrcFrog/: Client.hs  Connection.hs  State.hs  TestView.hs  Types.hs  View.hs  Views.hs
src/IrcFrog/Irc/: Connection.hs  Network.hs
src/IrcFrog/Types/: Client.hs  Connection.hs  Message.hs  Network.hs  TH.hs
src/IrcFrog/Views/: NetworkList.hs  TextWidget.hs
