name:                ircfrog
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/irc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ircfrog
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options: -threaded -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.*
                     , utf8-string == 1.0.*
                     , vector == 0.11.*
                     , text == 1.2.*
                     , async == 2.1.*
                     , stm == 2.4.*
                     , stm-chans == 3.0.*
                     , irc-client == 0.4.*
                     , irc-conduit == 0.2.*
                     , brick == 0.10
                     , microlens == 0.4.*
                     , microlens-th == 0.4.*
                     , template-haskell == 2.11.*
                     , vty == 5.11.*
                     , data-default == 0.7.*
                     , safe == 0.3.*
